apps/web/src/app/(docs)/docs/sdk-reference/cli/v1.5.1/template/page.mdx
## vdesk template


manage sandbox templates

### Usage

```bash
vdesk template [options] [command]
```
## vdesk template build


build sandbox template defined by ./vdesk.Dockerfile or ./Dockerfile in root directory. By default the root directory is the current working directory. This command also creates vdesk.toml config.

### Usage

```bash
vdesk template build [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `-d, --dockerfile <file>: specify path to Dockerfile. By default VDESKSK tries to find vdesk.Dockerfile or Dockerfile in root directory. `
 - `-n, --name <template-name>: specify sandbox template name. You can use the template name to start the sandbox with SDK. The template name must be lowercase and contain only letters, numbers, dashes and underscores. `
 - `-c, --cmd <start-command>: specify command that will be executed when the sandbox is started. `
 - `--ready-cmd <ready-command>: specify command that will need to exit 0 for the template to be ready. `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the VDESKSK dashboard (https://vdesk.dev/dashboard?tab=team). `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. `
 - `--cpu-count <cpu-count>: specify the number of CPUs that will be used to run the sandbox. The default value is 2. `
 - `--memory-mb <memory-mb>: specify the amount of memory in megabytes that will be used to run the sandbox. Must be an even number. The default value is 512. `
 - `--build-arg <args...>: specify additional build arguments for the build command. The format should be <varname>=<value>. `
 - `--no-cache: skip cache when building the template. `


## vdesk template list


list sandbox templates

### Usage

```bash
vdesk template list [options]
```

### Options


 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the VDESKSK dashboard (https://vdesk.dev/dashboard?tab=team). `


## vdesk template init


create basic VDESKSK Dockerfile (./vdesk.Dockerfile) in root directory. You can then run vdesk template build to build sandbox template from this Dockerfile

### Usage

```bash
vdesk template init [options]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `


## vdesk template delete


delete sandbox template and vdesk.toml config

### Usage

```bash
vdesk template delete [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the VDESKSK dashboard (https://vdesk.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual delete confirmation `


## vdesk template publish


publish sandbox template

### Usage

```bash
vdesk template publish [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the VDESKSK dashboard (https://vdesk.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual publish confirmation `


## vdesk template unpublish


unpublish sandbox template

### Usage

```bash
vdesk template unpublish [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. `
 - `-s, --select: select sandbox template from interactive list `
 - `-t, --team <team-id>: specify the team ID that the operation will be associated with. You can find team ID in the team settings in the VDESKSK dashboard (https://vdesk.dev/dashboard?tab=team). `
 - `-y, --yes: skip manual unpublish confirmation `


